--- a/VotingPC/App.xaml
+++ b/VotingPC/App.xaml
@@ -6,16 +6,18 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <FontFamily x:Key="Quicksand">pack://application:,,,/Assets/#Quicksand</FontFamily>
             <Style TargetType="AccessText">
-                <Setter Property="FontFamily" Value="Quicksand"/>
+                <Setter Property="FontFamily" Value="{StaticResource Quicksand}"/>
                 <Setter Property="FontWeight" Value="Medium"/>
             </Style>
             <Style TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="Quicksand"/>
+                <Setter Property="FontFamily" Value="{StaticResource Quicksand}"/>
                 <Setter Property="FontWeight" Value="Medium"/>
             </Style>
         </ResourceDictionary>
