--- a/VotingPC/Slide1_Welcome.xaml
+++ b/VotingPC/Slide1_Welcome.xaml
@@ -6,16 +6,25 @@
              xmlns:local="clr-namespace:VotingPC"
              mc:Ignorable="d"
              d:DesignHeight="720" d:DesignWidth="1280">
+    <UserControl.Resources>
+        <local:AddValue x:Key="AddValue"/>
+    </UserControl.Resources>
     <Grid>
+        <StackPanel Orientation="Vertical" Margin="0 36 0 0"
+                    VerticalAlignment="Top" HorizontalAlignment="Center">
+            <TextBlock Text="CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM"
+                       HorizontalAlignment="Center"
+                       FontWeight="Bold" FontSize="40"/>
+            <Line Stroke="Black" StrokeThickness="3" Margin="0 10"
+                  X1="0" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"/>
+            <TextBlock Text="Độc lập - Tự do - Hạnh phúc" FontSize="36"
+                       HorizontalAlignment="Center"/>
+        </StackPanel>
         <TextBlock Text="Vui lòng chạm ngón tay đã đăng ký lên máy quét vân tay"
                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="200 0"
                    FontSize="60" TextWrapping="Wrap" TextAlignment="Center"/>
 
-        <StackPanel Margin="20" HorizontalAlignment="Center" VerticalAlignment="Bottom" Orientation="Horizontal">
-            <Image Margin="0 0 40 0" Height="100" Width="100"
+        <Image Margin="0 0 0 36" Height="140" Width="140" VerticalAlignment="Bottom"
                 Source="Assets/Emblem_of_Vietnam.png" Stretch="Uniform"/>
-            <TextBlock Text="Bầu cử kẻ thống trị thế giới" 
-                       FontSize="40" VerticalAlignment="Center"/>
-        </StackPanel>
     </Grid>
 </UserControl>
