--- a/VotingPC/Slide1_Welcome.xaml
+++ b/VotingPC/Slide1_Welcome.xaml
@@ -14,21 +14,19 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Image Margin="36" Height="140" Width="140" Grid.RowSpan="2" 
+        <Image Height="140" Width="140" Grid.Row="0" Margin="36 18"
                 Source="Assets/Emblem_of_Vietnam.png"
-               VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <DockPanel  Grid.Row="0" HorizontalAlignment="Center">
-            
-            <StackPanel Margin="0 36 0 18" Orientation="Vertical" VerticalAlignment="Center">
-                    <TextBlock x:Name="textBlock" Text="CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM"
-                       HorizontalAlignment="Center"
-                       FontWeight="Bold" FontSize="40"/>
-                    <Line Stroke="Black" StrokeThickness="3" Margin="0 10"
-                  X1="0" X2="{Binding ActualWidth, ElementName=textBlock, Mode=OneWay}"/>
-                    <TextBlock Text="Độc lập - Tự do - Hạnh phúc" FontSize="36"
-                       HorizontalAlignment="Center"/>
-                </StackPanel>
-        </DockPanel>
+               VerticalAlignment="Center" HorizontalAlignment="Left"/>
+        <StackPanel Margin="0 36" Orientation="Vertical"
+                    HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="textBlock" Text="CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM"
+                           HorizontalAlignment="Center"
+                           FontWeight="Bold" FontSize="40"/>
+                <Line Stroke="Black" StrokeThickness="3" Margin="0 10"
+                      X1="0" X2="{Binding ActualWidth, ElementName=textBlock, Mode=OneWay}"/>
+                <TextBlock Text="Độc lập - Tự do - Hạnh phúc" FontSize="36"
+                           HorizontalAlignment="Center"/>
+        </StackPanel>
 
         <TextBlock Text="Vui lòng chạm ngón tay đã đăng ký lên máy quét vân tay" Grid.Row="1"
                    HorizontalAlignment="Center" VerticalAlignment="Center" Margin="200 0"
