--- a/VotingPC/App.xaml
+++ b/VotingPC/App.xaml
@@ -12,10 +12,12 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="AccessText">
-                <Setter Property="FontFamily" Value="Quicksand Medium"/>
+                <Setter Property="FontFamily" Value="Quicksand"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style>
             <Style TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="Quicksand Medium"/>
+                <Setter Property="FontFamily" Value="Quicksand"/>
+                <Setter Property="FontWeight" Value="Medium"/>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
