--- a/VotingPC/Slide1_Welcome.xaml
+++ b/VotingPC/Slide1_Welcome.xaml
@@ -25,7 +25,7 @@
                 <Line Stroke="Black" StrokeThickness="3" Margin="0 10"
                       X1="0" X2="{Binding ActualWidth, ElementName=textBlock, Mode=OneWay}"/>
                 <TextBlock Text="Độc lập - Tự do - Hạnh phúc" FontSize="36"
-                           HorizontalAlignment="Center"/>
+                           HorizontalAlignment="Center" FontWeight="Normal"/>
         </StackPanel>
 
         <TextBlock Text="Vui lòng chạm ngón tay đã đăng ký lên máy quét vân tay" Grid.Row="1"
