--- a/VotingPC/App.xaml
+++ b/VotingPC/App.xaml
@@ -20,7 +20,13 @@
                 <Setter Property="FontFamily" Value="Quicksand"/>
                 <Setter Property="FontWeight" Value="Medium"/>
             </Style>
-            
+
+            <Style TargetType="materialDesign:Card">
+                <Setter Property="Focusable" Value="False"/>
+                <Setter Property="IsTabStop" Value="False"/>
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
