--- a/VotingPC/MainWindow.xaml
+++ b/VotingPC/MainWindow.xaml
@@ -15,8 +15,9 @@
         Title="If you see this, the app is broken"
         Closing="Window_Closing"
         Loaded="Window_Loaded"
-        Width="1280" Height="720">
-    <materialDesign:DialogHost x:Name="dialogHost">
+        Width="1280" Height="720"
+        FocusVisualStyle="{x:Null}">
+    <materialDesign:DialogHost x:Name="dialogHost" IsTabStop="False" FocusVisualStyle="{x:Null}">
         <materialDesign:Transitioner x:Name="TransitionerObj" SelectedIndex="0">
             <materialDesign:TransitionerSlide>
                 <local:Slide1_Welcome x:Name="slide1"/>
