--- a/VotingPC/Slide1_Welcome.xaml
+++ b/VotingPC/Slide1_Welcome.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VotingPC"
-             mc:Ignorable="d"
+             mc:Ignorable="d" FocusVisualStyle="{x:Null}"
              d:DesignHeight="720" d:DesignWidth="1280">
     <UserControl.Resources>
         <local:AddValue x:Key="AddValue"/>
