--- a/VotingPC/Slide2_Vote.xaml
+++ b/VotingPC/Slide2_Vote.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VotingPC"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d"
+             mc:Ignorable="d" FocusVisualStyle="{x:Null}"
              d:DesignHeight="720" d:DesignWidth="1280">
     <UserControl.Resources>
         <local:AddValue x:Key="AddValue"/>
