--- a/VoteCounter/MainWindow.xaml
+++ b/VoteCounter/MainWindow.xaml
@@ -14,8 +14,9 @@
         Title="MainWindow" d:Height="640" d:Width="1200">
     <materialDesign:DialogHost x:Name="dialogHost" IsTabStop="False">
         <materialDesign:Transitioner x:Name="TransitionerObj" SelectedIndex="0" IsTabStop="False">
-            <local:Slide1_Landing x:Name="SlideLanding"/>
-            <local:Slide2_Overview x:Name="SlideOverview"/>
+            <local:Slide1_Landing x:Name="slideLanding"/>
+            <local:Slide2_Overview x:Name="slideOverview"/>
+            <local:Slide3_Detail x:Name="slideDetail"/>
         </materialDesign:Transitioner>
     </materialDesign:DialogHost>
 </Window>
