--- a/VotingDatabaseMaker/MainWindow.xaml
+++ b/VotingDatabaseMaker/MainWindow.xaml
@@ -26,11 +26,15 @@
             <TextBlock Text="Voting Database Maker" 
                        Margin="24" FontSize="30" Grid.Row="0"
                        VerticalAlignment="Center"/>
-            <Button Style="{StaticResource MaterialDesignIconForegroundButton}" Grid.Row="0"
-                    HorizontalAlignment="Right"
-                    Margin="18" Click="ThemeButton_Click" ToolTip="Theme màu tối">
-                <materialDesign:PackIcon x:Name="ThemeIcon" Kind="WeatherNight" Margin="0" />
-            </Button>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Style="{StaticResource MaterialDesignIconForegroundButton}"
+                        Margin="0" Click="ThemeButton_Click" ToolTip="Theme màu tối"
+                        VerticalAlignment="Center">
+                    <materialDesign:PackIcon x:Name="ThemeIcon" Kind="WeatherNight"/>
+                </Button>
+                <Button Content="Xuất file" Margin="24" FontSize="14"
+                        VerticalAlignment="Center"/>
+            </StackPanel>
 
             <Grid x:Name="grid" Grid.Row="1">
                 <Grid.ColumnDefinitions>
@@ -42,10 +46,9 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-
                 <!--Sector Block-->
-                <TextBlock Text="Sector" FontSize="24" Margin="24"/>
-                <Button x:Name="AddSectorButton" Content="Thêm sector" Margin="24" FontSize="14"
+                <TextBlock Text="Sector" FontSize="24" Margin="24 8"/>
+                <Button x:Name="AddSectorButton" Content="Thêm sector" Margin="24 8" FontSize="14"
                         VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="0"/>
                 <ListBox x:Name="SectorList" Grid.Row="1" Margin="24"/>
 
@@ -56,10 +59,8 @@
                       StrokeThickness="1" Stroke="{DynamicResource MaterialDesignBody}"/>
 
                 <!--Candidate Block-->
-                <StackPanel Grid.Column="1"  Margin="24">
-                    <TextBlock Text="Ứng cử viên" FontSize="24"/>
-                </StackPanel>
-                <Button x:Name="AddCandidateButton" Content="Thêm ứng cử viên" Margin="24" FontSize="14"
+                <TextBlock Grid.Column="1" Margin="24 8" Text="Ứng cử viên" FontSize="24"/>
+                <Button x:Name="AddCandidateButton" Content="Thêm ứng cử viên" Margin="24 8" FontSize="14"
                         VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1"/>
 
                 <ListView Grid.Column="1" Grid.Row="1" x:Name="NameList" Margin="24"
