--- a/VotingDatabaseMaker/SectorDialog.xaml
+++ b/VotingDatabaseMaker/SectorDialog.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Name="userControl" x:Class="VotingDatabaseMaker.CandidateDialog"
+﻿<UserControl x:Class="VotingDatabaseMaker.SectorDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,39 +6,21 @@
              xmlns:local="clr-namespace:VotingDatabaseMaker"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" d:Background="White"
-             d:DesignHeight="300" Width="460">
+             d:DesignHeight="220" Width="460"
+             DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <StackPanel Margin="32">
-        <TextBlock Text="Thêm ứng cử viên" FontSize="20" Margin="6 0 6 12" x:Name="Title"/>
-        <TextBox x:Name="NameTextBox" materialDesign:HintAssist.Hint="Tên ứng cử viên"
+        <TextBlock Text="Thêm Sector" FontSize="20" Margin="6 0 6 12" x:Name="Title"/>
+        <TextBox x:Name="NameTextBox" materialDesign:HintAssist.Hint="Tên Sector (cấp bầu cử, chức vụ,...)"
                  Margin="6" MaxLength="128" TextWrapping="Wrap">
             <TextBox.Text>
-                <Binding Path="NameInput" ElementName="userControl" Mode="TwoWay"
-                         UpdateSourceTrigger="PropertyChanged">
+                <Binding Path="NameInput" UpdateSourceTrigger="PropertyChanged">
                     <Binding.ValidationRules>
                         <local:NotEmptyValidationRule ValidatesOnTargetUpdated="True"/>
                     </Binding.ValidationRules>
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
-        <ComboBox MinWidth="72" IsEditable="True" Margin="6 12"
-                  materialDesign:HintAssist.Hint="Giới tính" x:Name="GenderBox"
-                  Style="{StaticResource MaterialDesignFloatingHintComboBox}">
-            <!--Items-->
-            <ComboBoxItem IsSelected="True">Ông</ComboBoxItem>
-            <ComboBoxItem>Bà</ComboBoxItem>
-            <!--Validate input and bind to property-->
-            <ComboBox.Text>
-                <Binding Path="GenderInput" Mode="TwoWay" ElementName="userControl"
-                         UpdateSourceTrigger="PropertyChanged">
-                    <Binding.ValidationRules>
-                        <local:NotEmptyValidationRule ValidatesOnTargetUpdated="True"/>
-                    </Binding.ValidationRules>
-                </Binding>
-            </ComboBox.Text>
-        </ComboBox>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="12 12 0 0">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="12 24 0 0">
             <Button Content="Hủy" Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
                     Style="{DynamicResource MaterialDesignFlatButton}">
                 <Button.CommandParameter>
@@ -47,7 +29,7 @@
                     </system:Boolean>
                 </Button.CommandParameter>
             </Button>
-            <Button Content="Thêm" Margin="24 0 0 0" Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
+            <Button Content=" OK " Margin="24 0 0 0" Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
                 <Button.CommandParameter>
                     <system:Boolean xmlns:system="clr-namespace:System;assembly=mscorlib">
                         True
@@ -57,9 +39,6 @@
                     <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignFlatButton}">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding Text.Length, ElementName=NameTextBox, UpdateSourceTrigger=PropertyChanged}" Value="0">
-                                <Setter Property="IsEnabled" Value="False"/>
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding Text.Length, ElementName=GenderBox, UpdateSourceTrigger=PropertyChanged}" Value="0">
                                 <Setter Property="IsEnabled" Value="False"/>
                             </DataTrigger>
                         </Style.Triggers>
