--- a/VoteCounter/DetailCard.xaml
+++ b/VoteCounter/DetailCard.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VoteCounter"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" d:Background="White"
              d:DesignHeight="120" d:DesignWidth="760">
@@ -15,15 +14,15 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock x:Name="positionTextBlock" d:Text="1" Margin="36 8" FontSize="64"
+            <TextBlock x:Name="PositionTextBlock" d:Text="1" Margin="36 8" FontSize="64"
                        VerticalAlignment="Center"/>
 
-            <TextBlock Grid.Column="1" d:Text="Nguyễn Văn A" FontSize="42" x:Name="nameTextBlock"
+            <TextBlock Grid.Column="1" d:Text="Nguyễn Văn A" FontSize="42" x:Name="NameTextBlock"
                        VerticalAlignment="Center" Margin="32 0" TextWrapping="Wrap"/>
 
             <DockPanel Grid.Column="2" Margin="22">
-                <TextBlock Text="Tổng phiếu" Grid.Column="2" FontSize="21" DockPanel.Dock="Top"/>
-                <TextBlock d:Text="256" DockPanel.Dock="Bottom" FontSize="46" x:Name="totalVotesTextBlock"
+                <TextBlock Text="Tổng phiếu" FontSize="21" DockPanel.Dock="Top"/>
+                <TextBlock d:Text="256" DockPanel.Dock="Bottom" FontSize="46" x:Name="TotalVotesTextBlock"
                            VerticalAlignment="Center" HorizontalAlignment="Center"/>
             </DockPanel>
         </Grid>
