--- a/VoteCounter/DisplayCard.xaml
+++ b/VoteCounter/DisplayCard.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="260" d:DesignWidth="600">
     <materialDesign:Card Height="Auto">
         <VirtualizingStackPanel x:Name="VirtualizingStackPanel" Margin="24">
-            <!--Name of section-->
+            <!--Name of sector-->
             <TextBlock x:Name="SectionTextBlock" Margin="16 0 16 12"
                        Text="Cấp mẫu 1" FontSize="32"/>
 
